# stats

./: Cargo.toml  Makefile.toml  README.md
src/: api.rs  domain.rs  main.rs
src/api/: add_batch.rs  stats.rs
src/domain/: algorithms.rs  computation.rs  models.rs
src/domain/algorithms/: avg.rs  last.rs  max.rs  min.rs  var.rs
